test/cases/compile_errors/stage1/obj/only_equality_binary_operator_allowed_for_error_sets.zig
comptime {
    const z = error.A > error.B;
    _ = z;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:23: error: operator not allowed for errors
